test/invalid/baseline/no-semicolon-callback.txt
Syntax error at line 5 in no-semicolon-callback.webidl, since `callback interface NoSemicolon`:
enum YouNeedOne {
^ Missing semicolon after callback interface
